--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <li class="right_list-item">꾸준히 성장하기 위해 자기계발을 멈추지 않습니다.</li>
                             <li class="right_list-item">마음먹은 것이 있다면 끝까지 해결에 나갑니다.</li>
                         </ul>
-                        <a href="" target="_blank" class="btn-line">
+                        <a href="profile.pdf" target="_blank" class="btn-line">
                             <span class="btn-text">이력서 (링크)</span>
                         </a>
                     </div>
@@ -162,7 +162,7 @@
                         </li>
                     </ul>
                     <div class="btn mt20">
-                        <a href="" target="_blank" class="btn-line">
+                        <a href="sub-1.html" target="_blank" class="btn-line">
                             <span class="btn-text">작업 과정 보기</span>
                         </a>
                         <a href="p2.html" target="_blank" class="btn-line">
@@ -207,7 +207,7 @@
                         </li>
                     </ul>
                     <div class="btn mt20">
-                        <a href="" target="_blank" class="btn-line">
+                        <a href="sub-2.html" target="_blank" class="btn-line">
                             <span class="btn-text">작업 과정 보기</span>
                         </a>
                         <a href="p1.html" target="_blank" class="btn-line">
