--- a/p1.html
+++ b/p1.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="cssp1/all.css">
   <link rel="stylesheet" href="cssp1/style.css">
   <script src="jsp1/custom.js"></script>
-  <title>rotation_wrb</title>
+  <title>Chanel Renewal</title>
 </head>
 <body>
   <div id="wrap">
