--- a/sub-1.html
+++ b/sub-1.html
@@ -9,8 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="author" content="bobaekim">
-	<meta name="keywords" content="웹디자인,포트폴리오,자기소개,이력서">
-    <title>샤넬</title>
+    <title>Hanok</title>
     <!-- css -->
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/sub.css" />  
@@ -37,19 +36,19 @@
     <section class="sub" id="sub-2">
         <div class="sub_wrap">
             <div class="list_title">
-                <p class="site_title"><span class="number">01</span>샤넬 리뉴얼</p>
-                <a href="" target="_blank" class="btn-line">
+                <p class="site_title"><span class="number">01</span>한옥</p>
+                <a href="p2.html" target="_blank" class="btn-line">
                     <span class="btn-text">프로토타입 보기</span>
                 </a>
             </div>
             <div class="next_prev">
-                <a href="p1.html"><span>샤넬 리뉴얼</span><i class="xi-angle-right"></i></a>
+                <a href="p2.html"><span>Hanok</span><i class="xi-angle-right"></i></a>
             </div>
         </div>
 
         <div class="bg01">
             <div class="mockup">
-                <img class="mockup_img" src="assets/img/sub/mo01.png" alt="mockup">
+                <img class="mockup_img" src="assets/img/sub/ha.png" alt="mockup">
             </div>
         </div>
 
@@ -57,36 +56,36 @@
             <div class="port_con">
                 <div class="list">
                     <h2>구분</h2>
-                    <p>App / Web / PC프로그램</p>
+                    <p>사이트</p>
                 </div>
                 <div class="list">
                     <h2>제작 기간</h2>
-                    <p>2022.06 - 2022.08 (3개월)</p>
+                    <p>(1개월)</p>
                 </div>
                 <div class="list">
                     <h2>제작 영역</h2>
-                    <p>App / Web / PC프로그램 각 디바이스별 페이지 디자인</p>
+                    <p>PC프로그램 페이지 디자인</p>
                 </div>
                     <p class="list_p">
-                    작업을 진행하면서 각 디바이스별 특징을 잘 이해하고있는것이 중요했고 또 각 디바이스별 담당 개발자분들과의 원활한 소통이 필요했습니다. 
-                    예를 들어 앱에서는 구현 가능한 기능이 웹사이트에서는 들어갈 수 없는 기능이라면 이에 맞게 디자인이 변경되어야하기에 이런 부분에 관해 적극적으로 의견을 주고받으며 작업을 효율적으로 진행하였습니다.    
+                        한국에 대표적인 것들이 많지만 그 중에 컨셉을 전통이 있는 한옥으로 잡았습니다.
+                        대표적인 창덕궁,덕수궁이 있지만 그 밖게 다른 곳들이 있는것을 알려 주고 싶어서 한옥과 한국에 한식을 알리고자 구성하며 페이지 디자인을 해보왔습니다. 주제의 맞는 컬러 베이지를 넣어 통일성있게 맞쳐 보왔습니다.
                 </p>
                 <div class="color color-1">
                     <h2>주요 컬러</h2>
-                    <span class="round1" style="background-color: #70DE2B;"></span>
-                    <span class="round2" style="background-color: #3A4F67;"></span>
+                    <span class="round1" style="background-color: burlywood;"></span>
+                    <span class="round2" style="background-color: #bbb;"></span>
                     <span class="round3" style="background-color: #fff; border: 1px solid #ccc;"></span>
                 </div>
                 <div class="detail">
-                    <h2>디자인 시안</h2>
+                    <h2>디자인 </h2>
                     <div class="detail_img">
                         <div>
-                            <p>App디자인 시안</p>
-                            <img src="assets/img/sub/pro04.png" alt="main1">
+                            <p>pc</p>
+                            <img src="assets/img/sub/ha.jpg" alt="main1">
                         </div>
                         <div>
-                            <p>PC프로그램디자인 시안</p>
-                            <img src="assets/img/sub/pro05.png" alt="main2">
+                            <p>모바일</p>
+                            <img src="assets/img/sub/dlf-.png" alt="main2">
                         </div>
                     </div>
                 </div>
