--- a/sub-2.html
+++ b/sub-2.html
@@ -9,8 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="author" content="bobaekim">
-	<meta name="keywords" content="웹퍼블리셔,포트폴리오,자기소개,이력서">
-    <title>판다 VPN</title>
+    <title>Chanel Renewal</title>
     <!-- css -->
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/sub.css" />  
@@ -37,20 +36,20 @@
     <section class="sub" id="sub-2">
         <div class="sub_wrap">
             <div class="list_title">
-                <p class="site_title"><span class="number">02</span>판다 VPN</p>
-                <a href="https://www.figma.com/proto/Nq6jLN7YqK30CYNXVVl5L4/안드로이드TV_판다VPN-(프로토타입)?page-id=0%3A1&amp;node-id=39%3A2219&amp;viewport=3559%2C-305%2C0.13&amp;scaling=scale-down&amp;starting-point-node-id=26%3A3302" target="_blank" class="btn-line">
+                <p class="site_title"><span class="number">02</span>Chanel Renewal</p>
+                <a href="p1.html" target="_blank" class="btn-line">
                     <span class="btn-text">프로토타입 보기</span>
                 </a>
             </div>
             <div class="next_prev">
-                <a href="sub-1.html"><i class="xi-angle-left"></i><span>테라VPN</span></a>
+                <a href="sub-1.html"><i class="xi-angle-left"></i><span>Hanok</span></a>
                 <a href="sub-3.html"><span>폰딜</span><i class="xi-angle-right"></i></a>
             </div>
         </div>
 
         <div class="bg02">
             <div class="mockup">
-                <img class="mockup_img" src="assets/img/sub/mo02.png" alt="mockup">
+                <img class="mockup_img" src="assets/img/sub/aa-1.png" alt="mockup">
             </div>
         </div>
 
@@ -58,7 +57,7 @@
             <div class="port_con">
                 <div class="list">
                     <h2>구분</h2>
-                    <p>안드로이드 TV앱</p>
+                    <p>사이트</p>
                 </div>
                 <div class="list">
                     <h2>제작 기간</h2>
@@ -66,60 +65,55 @@
                 </div>
                 <div class="list">
                     <h2>제작 영역</h2>
-                    <p>메인 페이지 1 , 서브 페이지 6 - 각 메뉴별 상세 페이지</p>
+                    <p> 상세 페이지</p>
                 </div>
                 <!-- <div class="list">
                     <h2>기획안</h2>
                     <p><a href="./sub-2_1.html" target="_blank">상세 보기</a></p>
                 </div> -->
-                 <p class="list_p">
-                    기존 모바일 앱과 디자인 컨셉은 유지하되 안드로이드 TV앱의 특성을 고려하여 작업하였습니다. 
-                    예를들어 리모컨 커서가 어떤 컨텐츠위에 위치해있는지 확인할수있게끔 해당 컨텐츠에 hover했을때 버튼색상을 다르게 한다거나, TV화면에서는 순백색이나 채도가 높은 색상을 사용했을 경우 
-                    너무 쨍해보여 눈이 아플 수 있다는 점을 고려하여 폰트색상을 #FFFFFF색상이 아닌 #EEEEEE색상을 사용하여 작업하였습니다.
+                <p class="list_p">
+                    작업하기 전에도 사이트는 컬리티가 떨어지지 않았지만 더욱 더 한번에 볼수 있는것을 추구 하여 구현 해보았습니다. 
+                    기본에 사이트는 메인에 페이지에서는 목록을 보고 선택을 하는 식에 방식으로 되어 있지만 목록이 많으므로 선택에 많이 걸리는걸 감안하며 한 눈에 보며 원하는 것을 누르면 바로 볼 수 있는걸로 구현을 했습니다.
+                    3D모션으로 페이지가 넘어가는 효과로 주어 넘어가도록 설계 했습니다.
                 </p>
                 <div class="color">
                     <h2>주요 컬러</h2>
-                    <span class="round1" style="background-color: #339BFE;"></span>
-                    <span class="round2" style="background-color: #939DB4;"></span>
-                    <span class="round3" style="background-color: #2B303E;"></span>
+                    <span class="round1" style="background-color: #bbbb;"></span>
+                    <span class="round2" style="background-color: black;"></span>
+                    <span class="round3" style="background-color: #ffff;border: 1px solid #ccc;"></span>
                 </div>   
                 <div class="detail">
                     <h2>디자인 시안</h2>
                     <div class="detail_img">
                         <div>
+                            <p>원본 페이지</p>
+                            <img src="assets/img/sub/be.jpg" alt="main2">
+                        </div>
+                        <div>
                             <p>메인 페이지</p>
-                            <img src="assets/img/pro02.png" alt="main2">
-                        </div>
-                        <div>
-                            <p>서버리스트 페이지</p>
-                            <img src="assets/img/sub/sub01.png" alt="sub1">
+                            <img src="assets/img/sub/af.jpg" alt="sub1">
                         </div>
                     </div>
                     <div class="detail_img">
                         <div>
-                            <p>내 계정 페이지</p>
-                            <img src="assets/img/sub/sub02.png" alt="sub2">
+                            <p>모션</p>
+                            <img src="assets/img/sub/ch.jpg" alt="sub2">
                         </div>
                         <div>
-                            <p>알림 페이지</p>
-                            <img src="assets/img/sub/sub03.png" alt="sub3">
+                            <p>페이지_1</p>
+                            <img src="assets/img/sub/ch1.jpg" alt="sub3">
                         </div>
                     </div>
                     <div class="detail_img">
                         <div>
-                            <p>결제 페이지</p>
-                            <img src="assets/img/sub/sub04.png" alt="sub4">
-                        </div>
-                        <div>
-                            <p>설정 페이지</p>
-                            <img src="assets/img/sub/sub05.png" alt="sub5">
+                            <p>페이지_2</p>
+                            <img src="assets/img/sub/ch3.jpg" alt="sub4">
                         </div>
                     </div>
                 </div>         
             </div>
         </div>
         
-  
     </section>
 
     <!-- js 연결 -->
