--- a/sub-3.html
+++ b/sub-3.html
@@ -38,7 +38,7 @@
         <div class="sub_wrap">
             <div class="list_title">
                 <p class="site_title"><span class="number">03</span>폰딜</p>
-                <a href="https://www.figma.com/proto/Pg940Q1QRxI7qBTPqryRZn/폰딜_프로토타입?page-id=0%3A1&amp;node-id=2%3A3&amp;viewport=619%2C395%2C0.25&amp;scaling=scale-down&amp;starting-point-node-id=2%3A3" target="_blank" class="btn-line">
+                <a href="" target="_blank" class="btn-line">
                     <span class="btn-text">프로토타입 보기</span>
                 </a>
             </div>
