--- a/p1.html
+++ b/p1.html
@@ -18,7 +18,7 @@
     </a>
 
     <nav>
-      <h1><img src="imgp1/logo-1.jpg" alt="logo"></h1>
+      <h1><img src="imgp1/LOGO-2.png" alt="logo"></h1>
       <ul di="gnb">
         <li><a href="#">Jewelry</a></li>
         <li><a href="#">Cosmetics</a></li>
