--- a/p2.html
+++ b/p2.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="cssp2/all.min.css">
   <link rel="stylesheet" href="cssp2/style.css">
-  <title>document</title>
+  <title>Hanok</title>
 </head>
 <body>
 <header>
