--- a/sub-1.html
+++ b/sub-1.html
@@ -48,7 +48,7 @@
 
         <div class="bg01">
             <div class="mockup">
-                <img class="mockup_img" src="assets/img/sub/ha.png" alt="mockup">
+                <img class="mockup_img" src="assets/img/sub/gk.png" alt="mockup">
             </div>
         </div>
 
@@ -85,7 +85,7 @@
                         </div>
                         <div>
                             <p>모바일</p>
-                            <img src="assets/img/sub/dlf-.png" alt="main2">
+                            <img src="assets/img/sub/qk-1.png" alt="main2">
                         </div>
                     </div>
                 </div>
