--- a/sub-2.html
+++ b/sub-2.html
@@ -49,7 +49,7 @@
 
         <div class="bg02">
             <div class="mockup">
-                <img class="mockup_img" src="assets/img/sub/aa-1.png" alt="mockup">
+                <img class="mockup_img" src="assets/img/sub/ti-.png" alt="mockup">
             </div>
         </div>
 
